# AgroRWA

./: .gitignore  Anchor.toml  Cargo.toml  README.md  approve_kyc.js  package-lock.json  package.json  page (1).tsx  page 2.crdownload
.github/workflows/: ci.yml
apps/web/: .env.example  next.config.js  package.json  tailwind.config.js
apps/web/src/app/: globals.css  (+2 more)
docs/: README.md  architecture.md  contracts.md  deployment.md  user-flow.md
files/: asset_registry.json  identity.json  insurance.json  marketplace.json  oracle_verify.json
frontend/: README.md  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/src/pages/: index.tsx  marketplace.tsx
frontend/src/styles/: globals.css
programs/agro_registry/: Cargo.toml
programs/agro_registry/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/asset_registry/: Cargo.toml
programs/asset_registry/src/: errors.rs  lib.rs  state.rs
programs/identity/: Cargo.toml
programs/identity/src/: errors.rs  lib.rs  state.rs
programs/insurance/: Cargo.toml
programs/insurance/src/: errors.rs  lib.rs  state.rs
programs/liquidity_pool/: Cargo.toml
programs/liquidity_pool/src/: errors.rs  instructions.rs  lib.rs  state.rs
programs/marketplace/: Cargo.toml
programs/marketplace/src/: errors.rs  lib.rs  state.rs
programs/oracle_verify/: Cargo.toml
programs/oracle_verify/src/: errors.rs  lib.rs  state.rs
programs/vault/: Cargo.toml
programs/vault/src/: errors.rs  instructions.rs  lib.rs  state.rs
scripts/: deploy.ts
smart-contracts/: README.md
tests/: agrorwa.test.ts
(+42 files in other folders)
